[project]
name = "marimo-ai-chat-page"
version = "0.1.0"
description = "Bring your own keys marimo ai chat app"
readme = "README.md"
requires-python = ">=3.13.3"
dependencies = [
    "anywidget[dev]>=0.9.18",
    "marimo[recommended]>=0.14.0",
    "mohtml>=0.1.10",
    "python-lsp-server>=1.12.2",
    "websockets>=15.0.1",
]
