[project]
name = "frfropen.ai"
version = "0.1.0"
description = "Bring your own keys marimo ai chat app. Stateless Version"
readme = "README.md"
requires-python = ">=3.13.3"
dependencies = [
    "marimo[recommended]>=0.14.0",
    "mohtml>=0.1.10",
    "requests>=2.32.4",
]

[dependency-groups]
dev = [
    "python-lsp-server>=1.12.2",
    "websockets>=15.0.1",
]
